--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="container">
     <div class="d-flex align-items-center justify-content-between">
-      <div>
+      <div class="d-flex align-items-center">
         <span class="me-2">{{ headerText }}</span>
         <ng-content select="[headerNavigation]"></ng-content>
       </div>
