--- a/frontend/src/app/modules/home-page/components/home-page.component.html
+++ b/frontend/src/app/modules/home-page/components/home-page.component.html
@@ -3,7 +3,11 @@
     <div classs="d-flex align-items-center">
       <ng-container *ngIf="!user">
         <span class="me-2">You are not logged in</span>
-        <button mat-raised-button color="primary" (click)="onNavigate('login')">
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="onNavigateToRoute('login')"
+        >
           Log In
         </button>
       </ng-container>
@@ -13,7 +17,7 @@
           mat-raised-button
           color="primary"
           class="me-2"
-          (click)="onNavigate('create-post')"
+          (click)="onNavigateToRoute('create-post')"
         >
           New post
         </button>
@@ -54,7 +58,7 @@
               mat-button
               color="primary"
               class="p-0"
-              (click)="onNavigate('edit-post', post.id)"
+              (click)="onNavigateToEditPost(post.id)"
               >{{ post.title }}</a
             ></strong
           >
