--- a/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
+++ b/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
@@ -17,3 +17,38 @@
     </div>
   </div>
 </app-header>
+<div class="container">
+  <form [formGroup]="formGroup" class="mt-4">
+    <div class="d-flex flex-column">
+      <mat-form-field appearance="fill" class="mb-2">
+        <mat-label>Title</mat-label>
+        <input matInput formControlName="title" />
+        <mat-error>{{ getControlError(title, "title", 200) }}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Message</mat-label>
+        <textarea matInput formControlName="body" rows="5" cols="40"></textarea>
+        <mat-error>{{ getControlError(body, "message", 2000) }}</mat-error>
+      </mat-form-field>
+      <div class="d-flex align-items-center justify-content-end">
+        <button
+          mat-raised-button
+          color="primary"
+          class="me-2"
+          [disabled]="formGroup.invalid || !title.dirty || !body.dirty"
+          (click)="onCreatePost()"
+        >
+          Save
+        </button>
+        <button
+          mat-raised-button
+          [disabled]="formGroup.invalid || !title.dirty || !body.dirty"
+          (click)="onNavigateToHomePage()"
+        >
+          Cancel
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
