--- a/frontend/src/app/modules/post-page/components/update-post/update-post-page.component.html
+++ b/frontend/src/app/modules/post-page/components/update-post/update-post-page.component.html
@@ -21,7 +21,7 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Message</mat-label>
-        <textarea matInput formControlName="body"></textarea>
+        <textarea matInput formControlName="body" rows="5" cols="40"></textarea>
         <mat-error>{{ getControlError(body, "message", 2000) }}</mat-error>
       </mat-form-field>
 
@@ -35,7 +35,7 @@
             color="primary"
             class="me-2"
             [disabled]="formGroup.invalid || !title.dirty || !body.dirty"
-            (click)="onSavePost()"
+            (click)="onUpdatePost()"
           >
             Save
           </button>
