--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,12 +1,29 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <div class="container">
     <div class="d-flex align-items-center justify-content-between">
       <div class="d-flex align-items-center">
-        <span class="me-2">{{ headerText }}</span>
-        <ng-content select="[headerNavigation]"></ng-content>
+        <span class="me-3">{{ headerText }}</span>
+        <a
+          *ngIf="showHomePageButton"
+          mat-raised-button
+          (click)="homePageButtonClick.emit()"
+        >
+          Go back to home page
+        </a>
       </div>
 
-      <ng-content select="[headerContent]"></ng-content>
+      <ng-container *ngIf="isLoggedIn !== undefined">
+        <div *ngIf="isLoggedIn" class="d-flex align-items-center">
+          <span class="custom-font-style me-2" *ngIf="userName"
+            >Welcome, {{ userName }}!</span
+          >
+          <ng-content select="[loginContent]"></ng-content>
+        </div>
+        <div *ngIf="!isLoggedIn" class="d-flex align-items-center">
+          <span class="custom-font-style me-2">You are not logged in</span>
+          <ng-content select="[logoutContent]"></ng-content>
+        </div>
+      </ng-container>
     </div>
   </div>
 </mat-toolbar>
