Create confirmation dialog, toolbar changes, refactoring

--- a/frontend/src/app/modules/login-page/components/login-page.component.html
+++ b/frontend/src/app/modules/login-page/components/login-page.component.html
@@ -1,4 +1,4 @@
-<app-header headerText="Log In"></app-header>
+<app-toolbar header="Log In"></app-toolbar>
 <div
   class="container log-in-container d-flex align-items-center justify-content-center"
 >
