--- a/frontend/src/app/modules/home-page/components/home-page.component.html
+++ b/frontend/src/app/modules/home-page/components/home-page.component.html
@@ -1,14 +1,14 @@
-<app-header
-  headerText="Home"
-  [isLoggedIn]="userIsLoggedIn"
+<app-toolbar
+  header="Home"
+  [userIsLoggedIn]="userIsLoggedIn"
   [userName]="user?.name"
 >
-  <div logoutContent>
+  <div logout>
     <button mat-raised-button (click)="onNavigateToRoute('login')">
       Log In
     </button>
   </div>
-  <div loginContent>
+  <div login>
     <button
       mat-raised-button
       class="me-2"
@@ -18,7 +18,7 @@
     </button>
     <button mat-raised-button (click)="onLogout()">Log out</button>
   </div>
-</app-header>
+</app-toolbar>
 
 <div class="container">
   <table
@@ -27,8 +27,8 @@
     class="w-100 mt-4 mat-elevation-z8"
   >
     <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef><h2>Users</h2></th>
-      <td mat-cell *matCellDef="let post">
+      <th mat-header-cell *matHeaderCellDef><h2 class="mb-0">Users</h2></th>
+      <td mat-cell *matCellDef="let post" class="pe-3 py-2">
         <div class="d-flex align-items-start flex-column">
           {{ post.user.name }}
           <a
@@ -44,8 +44,8 @@
     </ng-container>
 
     <ng-container matColumnDef="post">
-      <th mat-header-cell *matHeaderCellDef><h2>Posts</h2></th>
-      <td mat-cell *matCellDef="let post">
+      <th mat-header-cell *matHeaderCellDef><h2 class="mb-0">Posts</h2></th>
+      <td mat-cell *matCellDef="let post" class="py-2">
         <div class="d-flex align-items-start flex-column">
           <strong
             ><a
@@ -66,6 +66,7 @@
     <tr mat-row *matRowDef="let row; columns: tableColumns"></tr>
   </table>
   <mat-paginator
+    class="mt-3"
     [length]="totalLength"
     [pageSize]="pageSize"
     (page)="onPageChange($event)"
