--- a/frontend/src/app/modules/post-page/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/modules/post-page/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>{{ data.header }}</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content>
   {{ data.text }}
 </mat-dialog-content>
 <div class="d-flex align-items-center justify-content-end">
