--- a/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
+++ b/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
@@ -1,25 +1,28 @@
-<app-header
-  headerText="New post"
+<app-toolbar
+  header="New post"
   [showHomePageButton]="true"
-  [isLoggedIn]="true"
+  [userIsLoggedIn]="true"
   [userName]="user?.name"
   (homePageButtonClick)="onNavigateToHomePageWithConfirmation()"
 >
-</app-header>
+</app-toolbar>
 <div class="container">
   <form [formGroup]="formGroup" class="mt-3">
     <div class="d-flex flex-column">
       <mat-form-field appearance="fill" class="mb-2">
         <mat-label>Title</mat-label>
         <input matInput formControlName="title" />
-        <mat-error>{{ getControlError(title, "title", 200) }}</mat-error>
+        <mat-error>{{ getControlErrorMessage(title, "title", 200) }}</mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Message</mat-label>
         <textarea matInput formControlName="body" rows="5" cols="40"></textarea>
-        <mat-error>{{ getControlError(body, "message", 2000) }}</mat-error>
+        <mat-error>{{
+          getControlErrorMessage(body, "message", 2000)
+        }}</mat-error>
       </mat-form-field>
+
       <div class="d-flex align-items-center justify-content-end">
         <button
           mat-raised-button
