--- a/frontend/src/app/modules/login-page/components/login-page.component.html
+++ b/frontend/src/app/modules/login-page/components/login-page.component.html
@@ -13,7 +13,7 @@
         mat-raised-button
         color="primary"
         (click)="onLogin()"
-        [disabled]="!userName.value || !userName.touched || !userName.dirty"
+        [disabled]="!userName.value"
       >
         Log In
       </button>
