--- a/frontend/src/app/modules/home-page/components/home-page.component.html
+++ b/frontend/src/app/modules/home-page/components/home-page.component.html
@@ -29,13 +29,10 @@
     class="w-100 mt-3 mat-elevation-z8"
   >
     <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef><h2 class="mb-0">Users</h2></th>
+      <th mat-header-cell *matHeaderCellDef><h2 class="mb-0">User</h2></th>
       <td mat-cell *matCellDef="let post" class="pe-3 py-2">
-        <div class="d-flex align-items-start flex-column">
+        <div class="d-flex align-items-start">
           {{ post.user.name }}
-          <a mat-button color="primary" class="p-0">
-            {{ post.user.company.name }}
-          </a>
         </div>
       </td>
     </ng-container>
