--- a/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
+++ b/frontend/src/app/modules/post-page/components/create-post/create-post-page.component.html
@@ -32,14 +32,14 @@
             mat-raised-button
             color="primary"
             class="me-2"
-            [disabled]="formGroup.invalid || !title.dirty || !body.dirty"
+            [disabled]="!title.value || !body.value"
             (click)="onCreatePost()"
           >
             Save
           </button>
           <button
             mat-raised-button
-            [disabled]="formGroup.invalid || !title.dirty || !body.dirty"
+            [disabled]="!title.value || !body.value"
             (click)="onNavigateToHomePageWithConfirmation()"
           >
             Cancel
